--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --forceExit --runInBand",
     "test:incognito": "INCOGNITO=true jest --runInBand",
-    "example": "jest --forceExit -i ./tests/example.test.js -t \"a\" --runInBand",
+    "example": "jest --forceExit -i ./tests/example.test.js -t \"a\"",
     "header": "jest --forceExit -i ./tests/header.test.js -t \"a\" --runInBand",
     "report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "report-clear": "allure generate --clean --output allure-results"
@@ -17,6 +17,7 @@
     "babel": "^6.23.0",
     "babel-jest": "^27.4.5",
     "chai": "^4.3.4",
+    "cypress": "^10.2.0",
     "jest": "^27.4.5",
     "jest-allure": "^0.1.3",
     "jest-extended": "^1.2.0",
